[gd_scene load_steps=9 format=3 uid="uid://du3wod3c5ekak"]

[ext_resource type="Script" path="res://scripts/main_menu_manager.gd" id="1_10g8r"]
[ext_resource type="Script" path="res://scripts/black_fade_manager.gd" id="2_1uxg3"]
[ext_resource type="PackedScene" path="res://scenes/packed scenes/music_controller.tscn" id="3_2wh52"]

[sub_resource type="Animation" id="Animation_y71wv"]
resource_name = "MenuFadeIn"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackFade/BlackPanel:theme_override_styles/panel:bg_color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 3)
}

[sub_resource type="Animation" id="Animation_ir7uj"]
resource_name = "MenuFadeOut"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackFade/BlackPanel:theme_override_styles/panel:bg_color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="Animation" id="Animation_4lrgs"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackFade/BlackPanel:theme_override_styles/panel:bg_color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nori6"]
_data = {
&"MenuFadeIn": SubResource("Animation_y71wv"),
&"MenuFadeOut": SubResource("Animation_ir7uj"),
&"RESET": SubResource("Animation_4lrgs")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tn5ty"]
bg_color = Color(0, 0, 0, 0)

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_10g8r")

[node name="MusicController" parent="." instance=ExtResource("3_2wh52")]

[node name="BlackFade" type="Node" parent="."]
script = ExtResource("2_1uxg3")

[node name="BlackFadeAnim" type="AnimationPlayer" parent="BlackFade"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_nori6")
}

[node name="BlackPanel" type="Panel" parent="BlackFade"]
z_index = 9
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tn5ty")

[connection signal="animation_finished" from="BlackFade/BlackFadeAnim" to="BlackFade" method="_on_black_fade_anim_animation_finished"]
